--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
       <div class="container make-container"> 
         <div class="make_hero"> 
+          <!-- COMMENT -->
           <h3 class="make__title">Let’s make things happen</h3> 
           <p class="make-desc"> Contact us today to learn more about how our digital marketing services can help your business grow and succeed online. 
           </p> 
